# whatsapp-cloud-api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
src/: analytics.rs  block.rs  client.rs  error.rs  flows.rs  lib.rs  media.rs  messages.rs  phone_numbers.rs  products.rs  qr_codes.rs  templates.rs  types.rs  typing.rs  waba.rs  webhooks.rs  webhooks_management.rs
tests/: analytics_test.rs  block_test.rs  client_test.rs  common.rs  flows_test.rs  media_test.rs  messages_test.rs  phone_numbers_test.rs  products_test.rs  qr_codes_test.rs  templates_test.rs  typing_test.rs  waba_test.rs  webhooks_management_test.rs  webhooks_test.rs
